apps/matomo/prod/mariadb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: matomo-mariadb
spec:
  serviceName: matomo-mariadb
  replicas: 1
  selector:
    matchLabels:
      app: matomo-mariadb
  template:
    metadata:
      labels:
        app: matomo-mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:11
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
      securityContext:
        runAsNonRoot: true
        fsGroup: 999
        runAsUser: 999
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
